--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       Formed in 1921, the CCP rose to power after defeating the Nationalists in the Chinese Civil War.
       By 1949, the PRC was officially established, marking the beginning of communist rule in mainland China. 
       They took control of jiangxi province before moving north to yan'an. This was after the nationalists 
-      destroyed the old base. Being at yan'an , the communists then helped the nationalists fight
+      destroyed the old base. Being at yan'an, the communists then helped the nationalists fight
       the japanese before controlling all of Manchuria north of the Songhua River, the eastern part, 
       and much of the countryside in the south. In 1948, the Communists attacked the major populated
       regions of china in which greatlly weakened the power of the corrupt ROC army.
@@ -110,7 +110,7 @@
     </p>
     <p>
     <strong><h3>Now the part you all have been waiting for.... the indian war machine!: (Sources from Sarah Paine but i elaborate)</h3></strong> 
-    After the capture of tibet, India being super friendly recongizes the PRC as the one chinese government. India being super idealistic and 
+    After the capture of <strong>tibet</strong>, India being super friendly recongizes the PRC as the one chinese government. India being super idealistic and 
     had allied the soviet union after the sino soviet split made china look at india with caution. So when china attacked tibet, indians were angry
     as tibetian culture was of indian origin and not chinese origin. So then the chinese stated that if india were to recognise their sovereignty
     over complete tibet and parts of the aksai chin in kashmir, china will recognise indian sovereignty over a much densely populated arunachal pradesh
