--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
   <img src="https://i.ibb.co/yBcGzphm/image.png" alt="China image" />
   <h1>This is my first website</h1>
   <p>I will be adding more new features but this is all I can provide.</p>
-  <p>Welcome to China where one is able to ask about China history :)</p>
-
+  <p>Welcome to China where one understand China's history :)</p>
+  <p><strong><h2>Modern China's history</h2></strong></p>
   <button onclick="showSection('prc')">Learn about PRC</button>
   <button onclick="showSection('roc')">Learn about ROC</button>
+  <button onclick="showSection('roc')">Learn about ROC</button>
+  
 
   <div id="hiddenContent">
     <h2>People’s Republic of China (PRC)</h2>
@@ -79,7 +81,7 @@
     <p>
       Formed in 1921, the CCP rose to power after defeating the Nationalists in the Chinese Civil War.
       By 1949, the PRC was officially established, marking the beginning of communist rule in mainland China. 
-      They took control of jiangxi province before moving north to yan'an. This was after the nationalists 
+      They took control of Jiangxi Province before moving north to Yan'an. This was after the nationalists 
       destroyed the old base. Being at yan'an, the communists then helped the nationalists fight
       the japanese before controlling all of Manchuria north of the Songhua River, the eastern part, 
       and much of the countryside in the south. In 1948, the Communists attacked the major populated
@@ -104,7 +106,7 @@
     rejection of Soviet de-Stalinization and "peaceful coexistence" with the West, which Mao Zedong saw as revisionism. 
     China also resented Soviet foreign policies, such as its relationship with India, while the USSR feared Mao's more aggressive stance.
     This ideological rift led to open conflict in 1969 and fundamentally altered the global balance of power during the Cold War. 
-    Essentially the split was due to the different ideoligys and the de-satlinization. This brought rise to the maoism which is a doctrine
+    Essentially, the split was due to the different ideologies and the desatlinization. This brought rise to the maoism which is a doctrine
     created by maozedong as formerly practised in China, having as a central idea permanent revolution and stressing the importance of the peasantry,
      small-scale industry, and agricultural collectivization. <strong>*of course now china does not practise it lah but its interesting :)</strong>
     </p>
@@ -118,7 +120,7 @@
      plateau and the arunachal pradesh area marking the 1960s sino indian war. The chinese won as the indians were furious, after treating the 
      chinese kindly even after the brutal oppression of tibet, so they bulk their military to become one of the most no.of active military personnels.
      <span style="color: yellow;"><strong>Jawaharlal nehru:</strong></span>"There are not many instances in history where one country has gone out of her way
-     to be friendly and co-operative with the chinese government and people, and to plead their cause in the councils of the world,and then for the chinese even
+     to be friendly and co-operative with the chinese government and people, and to plead their cause in the councils of the world, and then for the chinese even
      go tothe extent of commitig aggression and invade our sacred land. "
 
     </p>
