--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <p><strong><h2>Modern China's history</h2></strong></p>
   <button onclick="showSection('prc')">Learn about PRC</button>
   <button onclick="showSection('roc')">Learn about ROC</button>
-  <button onclick="showSection('roc')">Learn about ROC</button>
+  <button onclick="showSection('roc')">Learn about hi</button>
   
 
   <div id="hiddenContent">
