--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
   <p><strong><h2>Modern China's history</h2></strong></p>
   <button onclick="showSection('prc')">Learn about PRC</button>
   <button onclick="showSection('roc')">Learn about ROC</button>
-  <button onclick="showSection('roc')">Learn about hi</button>
-  
+  <p><span style="color: yellow;"><strong>China's golden age/ China's age of prosperity</strong></span></p>
+  <button onclick="showSection('Golden age1')">Tang dynasty</button>
+  <button onclick="showSection('Golden age2')">Song dynasty</button>
 
   <div id="hiddenContent">
     <h2>People’s Republic of China (PRC)</h2>
@@ -134,6 +135,10 @@
       Initially ruled by the Kuomintang (KMT), it unified the country and governed from Nanjing.
       After losing the civil war in 1949, the ROC government relocated to Taiwan, where it continues to exist today.
     </p>
+  </div>
+  <div id="Golden age1">
+    <strong><h3>Tang dynasty</h3></strong>
+    
   </div>
 
   <script>
