--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <p><strong><h2>Modern China's history</h2></strong></p>
   <button onclick="showSection('prc')">Learn about PRC</button>
   <button onclick="showSection('roc')">Learn about ROC</button>
-  <p><span style="color: goldenrod;"><strong>China's golden age/ China's age of prosperity</strong></span></p>
+  <p><span style="color: goldenrod;"><strong><h2>China's golden age/ China's age of prosperity</h2></strong></span></p>
   <button onclick="showSection('Golden age1')">Tang dynasty</button>
   <button onclick="showSection('Golden age2')">Song dynasty</button>
 
