--- a/index.html
+++ b/index.html
@@ -149,14 +149,16 @@
       // Hide both first
       prc.style.display = "none";
       roc.style.display = "none";
+      Golden age1.style.display = "none";
 
       // Show the chosen one
       if (section === "prc") {
         prc.style.display = "block";
       } else if (section === "roc") {
         roc.style.display = "block";
-      }
-    }
+      } else if (section === "Golden age1:) {
+        Golden age1.style.display = "block"
+       }
   </script>
 </body>
 </html>
