--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background-color: #f9f9f9;
+      background-color: ##CD071E;
       padding: 20px;
     }
 
@@ -68,8 +68,8 @@
       333 province-level divisions, 5 autonomous regions, 4 municipalities, and 2 special administrative regions.
       Beijing is the capital, while Shanghai is the most populous city and largest financial center.
       Both were handed to the PRC
-    by the british and the portugese respectively and will end its special administarative 
-    status in 2047. It holds 17% of the worlds population of 1.4 billion people. 
+    by the british and the portugese respectively and will end their special administrative 
+    status in 2047. It holds 17% of the world's population of 1.4 billion people. 
     </p>
     <h3>Mao Zedong's Rule</h3>
     <p>
@@ -128,8 +128,47 @@
 
   <!-- TANG DYNASTY SECTION -->
   <div id="golden1" class="info-section">
-    <h2>Tang Dynasty</h2>
-    <p>The Tang dynasty was one of China’s golden ages...</p>
+    <h2>Tang Dynasty <strong>618 - 907 AD</strong></h2>
+    <h4>There were 24 emperors. 
+1. Gaozu (618–626)
+2. Taizong (626–649)
+3. Gaozong (649–683)
+4. Zhongzong (first reign 684)
+5. Ruizong (first reign 684–690)
+6. Wu Zetian (ruler of the Wu Zhou interregnum, 690–705)
+7. Zhongzong (second reign 705–710)
+8. Shaodi (Shangdi) (710, reigned one month)
+9. Ruizong (second reign 710–712)
+10. Xuanzong (712–756)
+11. Suzong (756–762)
+12. Daizong (762–779)
+13. Dezong (779–805)
+14. Shunzong (805)
+15. Xianzong (805–820)
+16. Muzong (820–824)
+17. Jingzong (824–827)
+18. Wenzong (826–840)
+19. Wuzong (840–846)
+20. Xuanzong II (also known as Xuanzong, 846–859)
+21. Yizong (859–873)
+22. Xizong (873–888)
+23. Zhaozong (888–904)
+24. Aidi (also known as Zhaoxuan or Ai, the last emperor, 904–907) </h4>
+    <p>The Tang dynasty was one of China’s golden ages. <strong>Why would people say that?</strong> Well this is because of the Tang Dynasty's its cosmopolitan culture,
+      political stability, and flourishing arts and sciences. The Tang dynasty was initially ruled by Emperor Gaozu (Li Yuan) and his son, Emperor Taizong (Li Shimin). 
+      Emperor Gaozu founded the dynasty in 618 after overthrowing the Sui, and reigned until 626 when his son deposed him. Emperor Taizong then ruled from 626 to 
+      649 and is credited with inaugurating the "Zhenguan Era," considered a peak of feudal society. </p>
+    <p>
+      <strong><h2>1.</h2><h3>Emperor Gaozu</h3></strong>: Emperor gaozu was the founder of the Tang dynasty. He was originally a senior minister of the previous Sui dynasty who rose 
+      to power during its collapse. He was then crowned as emperor with his son <strong>Emperor TaiZhong</strong>. Emperor gaozu reigned from 618 to 626 during which his reign,
+      Emperor gaozu defeated rival warlords, effectively trying to unify China under one empire. He adopted some laws and policies created by the first emperor of the Sui
+      dynasty. He abolished the harsh laws and corrupt judicial system of the Sui Dynasty, lowered taxes, and implemented policies for the fair distribution of land,
+      which helped stabilize the country and promote economic prosperity. 
+    </p>
+    <img src="https://i.ibb.co/0yZ2Wx47/image.png" alt="image"./>
+    <p>
+      
+    </p>
   </div>
   <!--Song dynasty stuff-->
   <div id="golden2" class="info-section">
