--- a/index.html
+++ b/index.html
@@ -122,8 +122,18 @@
 
   <!-- ROC SECTION -->
   <div id="roc" class="info-section">
-    <h2>Republic of China (ROC)</h2>
-    <p>ROC content here...</p>
+    <h2>Republic of China (ROC)</h2><img src="https://i.ibb.co/B548pMT0/image.png" alt="flagggg"</a>
+    <p>The <strong><h4>Republic of china</h4></strong>, is a disputed territory in which calls itself as a political entity or a country while still having the PRC 
+    claiming it as their 23rd province. <span style="color: yellow;"><h5><strong>Geography</strong></h5></span>,the republic of china is located in the island of taiwan
+    where it is usually labelled as Taiwan/chinese taipei/eastern china. The political entity has the mainland of taiwan and a few smaller islands in which the kinmen islands
+    being the closest to the chinese mainland. Taiwan is overwhelmingly mountainous, with roughly 70% to over 70% of its territory covered by highlands and mountain ranges,
+    featuring numerous high peaks, including East Asia's highest, Yushan (Jade Mountain). This results in which most of taiwan's population living near the western side of the 
+    island towards PRC. Link to video for better more elaborate information:  https://youtu.be/dGVpTbkon10?si=B-V9YMTRWxwNV9gt
+    </p>
+    <img src="https://i.ibb.co/qLjtzs2F/image.png" alt="Taiwan" />
+    <p><h3><strong>History!!</strong></h3>
+      
+    </p>
   </div>
 
   <!-- TANG DYNASTY SECTION -->
