--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     region. But Nehru does not agree with it, so during the cold war cuban missile crisis when soviets were distracted, they invades the aksai chin
      plateau and the arunachal pradesh area marking the 1960s sino indian war. The chinese won as the indians were furious, after treating the 
      chinese kindly even after the brutal oppression of tibet, so they bulk their military to become one of the most no.of active military personnels.
-     <span style="color: yellow;"><strong>Jawaharlal nehru:</strong></span>"There are not many instances in history where one country has gone out of her way
+     <span style="color: brown;"><strong>Jawaharlal nehru:</strong></span>"There are not many instances in history where one country has gone out of her way
      to be friendly and co-operative with the chinese government and people, and to plead their cause in the councils of the world, and then for the chinese even
      go tothe extent of commitig aggression and invade our sacred land. "
 
@@ -124,16 +124,23 @@
   <div id="roc" class="info-section">
     <h2>Republic of China (ROC)</h2><img src="https://i.ibb.co/B548pMT0/image.png" alt="flagggg"</a>
     <p>The <strong><h4>Republic of china</h4></strong>, is a disputed territory in which calls itself as a political entity or a country while still having the PRC 
-    claiming it as their 23rd province. <span style="color: yellow;"><h5><strong>Geography</strong></h5></span>,the republic of china is located in the island of taiwan
+    claiming it as their 23rd province. <span style="color: green;"><h5><strong>Geography</strong></h5></span>,the republic of china is located in the island of taiwan
     where it is usually labelled as Taiwan/chinese taipei/eastern china. The political entity has the mainland of taiwan and a few smaller islands in which the kinmen islands
     being the closest to the chinese mainland. Taiwan is overwhelmingly mountainous, with roughly 70% to over 70% of its territory covered by highlands and mountain ranges,
     featuring numerous high peaks, including East Asia's highest, Yushan (Jade Mountain). This results in which most of taiwan's population living near the western side of the 
-    island towards PRC. Link to video for better more elaborate information:  https://youtu.be/dGVpTbkon10?si=B-V9YMTRWxwNV9gt
+    island towards PRC. Link to video for better more elaborate information:   <span style="color: blue;"><h5><strong>https://youtu.be/dGVpTbkon10?si=B-V9YMTRWxwNV9gt</strong></h5></span>
     </p>
     <img src="https://i.ibb.co/qLjtzs2F/image.png" alt="Taiwan" />
     <p><h3><strong>History!!</strong></h3>
+      The republic of china started its campaign in 1912 after overthrowing imperial China in the Xinhai revolution of 1911, led by Sun Yat-sen. The started from nanking where then they expanded 
+      against imperial china where they officially entered the royal place and kick out emperor puyi on 1912. The capital was nanking and was the largest state then, this was follewed by mongolia, tibet, 
+      and then the communist party of china. From 1927, the Kuomintang (KMT) reunified the country and initially ruled it as a one-party state with Nanjing as the national capital. In 1949, the KMT-led 
+      government was defeated in the Chinese Civil War and lost control of the mainland to the Chinese Communist Party (CCP). The CCP established the People's Republic of China (PRC) while the ROC was forced 
+      to retreat to Taiwan; the ROC retains control over the Taiwan Area, and its political status remains disputed. The ROC is recorded as a founding member of both the League of Nations and the United Nations, 
+      and previously held a permanent seat on the United Nations Security Council until 1971, when the PRC took the seat of China from the ROC in the United Nations General Assembly Resolution 2758. It was also a member of the Universal 
+      Postal Union and the International Olympic Committee. The ROC claimed 11.4 million km2 (4.4 million sq mi) of territory,[6] and its population of 541 million in 1949 made it the most populous country in the world.
       
-    </p>
+    </p> 
   </div>
 
   <!-- TANG DYNASTY SECTION -->
@@ -165,8 +172,8 @@
     <p>The Song dynasty was one of China’s golden ages...</p>
   </div>
   <div id="emperors1" class="info-section">
-Emperor Gaozu	618–626
-Emperor Taizong	626–649
+<p>Emperor Gaozu	618–626
+   Emperor Taizong	626–649
 Emperor Gaozong	650–683
 Emperor Zhongzong	684 and 705–710
 Emperor Ruizong	684–690 and 710–712
@@ -184,7 +191,7 @@ Emperor Wuzong	840–846
 Emperor Yizong	846–859
 Emperor Xizong	859–873
 Emperor Zhaozong	873–888
-Emperor Ai	888–904
+Emperor Ai	888–904</p>
   </div>
   
 
