--- a/index.html
+++ b/index.html
@@ -172,26 +172,26 @@
     <p>The Song dynasty was one of China’s golden ages...</p>
   </div>
   <div id="emperors1" class="info-section">
-<p>Emperor Gaozu	618–626
-   Emperor Taizong	626–649
-Emperor Gaozong	650–683
-Emperor Zhongzong	684 and 705–710
-Emperor Ruizong	684–690 and 710–712
-Wu Zetian	690–705
-Emperor Xuanzong	712–756
-Emperor Suzong	756–762
-Emperor Daizong	762–779
-Emperor Dezong	780–805
-Emperor Shunzong	805
-Emperor Xianzong	806–820
-Emperor Muzong	821–824
-Emperor Jingzong	824–826
-Emperor Wenzong	826–840
-Emperor Wuzong	840–846
-Emperor Yizong	846–859
-Emperor Xizong	859–873
-Emperor Zhaozong	873–888
-Emperor Ai	888–904</p>
+<p>Emperor Gaozu	618–626</p>
+<p>Emperor Taizong	626–649</p>
+<p>Emperor Gaozong	650–683</p>
+<p>Emperor Zhongzong	684 and 705–710</p>
+<p>Emperor Ruizong	684–690 and 710–712</p>
+<p>Wu Zetian	690–705</p>
+<p>Emperor Xuanzong	712–756</p>
+<p>Emperor Suzong	756–762</p>
+<p>Emperor Daizong	762–779</p>
+<p>Emperor Dezong	780–805</p>
+<p>Emperor Shunzong	805</p>
+<p>Emperor Xianzong	806–820</p>
+<p>Emperor Muzong	821–824</p>
+<p>Emperor Jingzong	824–826</p>
+<p>Emperor Wenzong	826–840</p>
+<p>Emperor Wuzong	840–846</p>
+<p>Emperor Yizong	846–859</p>
+<p>Emperor Xizong	859–873</p>
+<p>Emperor Zhaozong	873–888</p>
+<p>Emperor Ai	888–904</p>
   </div>
   
 
