--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
 <p>Emperor Xizong	859–873</p>
 <p>Emperor Zhaozong	873–888</p>
 <p>Emperor Ai	888–904</p>
+<form action="/search_results.html" method="get">
+  <label for="search-query">Search:</label>
+  <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
+  <button type="submit">Search</button>
+</form>
+
   </div>
   
 
