--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <body>
 
   <h1>This is my first website</h1>
+  <img src="https://i.ibb.co/PzgWwrj5/image.png" alt="image" border="0"></a>
 
   <button onclick="showSection('prc')">Learn about PRC</button>
   <button onclick="showSection('roc')">Learn about ROC</button>
