--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
       regions of china in which greatlly weakened the power of the corrupt ROC army.
     </p>
     <p>
-    <strong><h3>Capture of tibet + aksai chin = indian war machine:</h3></strong> After the chinese civil war,
+    <strong><h3>Capture of tibet + aksai chin = indian war machine:</h3></strong>
+    </p>
+    <img src="https://i.ibb.co/kbwNWHN/image.png" alt="image" border="0"></a>
+    <p>
+      After the chinese civil war,
     the <span style="color: blue;"><strong>PRC</strong></span> demanded that all former qing dynasty members
     are to join with the PRC. They did not have much attention to the mongolians as a buffer state for their 
     ally the soviets. However had a <strong>keen interest</strong> in tibet, this is due to its low population
