--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <!-- PRC SECTION -->
   <div id="prc" class="info-section">
     <h2>People’s Republic of China (PRC)</h2>
+    <img src="https://i.ibb.co/gH05tzj/image.png" alt="image" border="0"></a>
     <p>
       The PRC is the current ruling government of China with 22 provinces and the 23rd being Taiwan,
       333 province-level divisions, 5 autonomous regions, 4 municipalities, and 2 special administrative regions.
