--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
 
   <h1>This is my first website</h1>
   <img src="https://i.ibb.co/PzgWwrj5/image.png" alt="image" border="0"></a>
-
-  <button onclick="showSection('prc')">Learn about PRC</button>
-  <button onclick="showSection('roc')">Learn about ROC</button>
+  <form action="/search_results.html" method="get">
+  <label for="search-query">Search:</label>
+  <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
+  <button type="submit">Search</button>
+</form>
+  <button onclick="showSection('prc')">PRC</button>
+  <button onclick="showSection('roc')">ROC</button>
   <button onclick="showSection('golden1')">Tang Dynasty</button>
   <button onclick="showSection( 'golden2')">Song Dynasty</button>
 
