--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
   <label for="search-query">Search:</label>
   <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
   <button type="submit">Search</button>
+    <button style="background-color: red; color: white; border: none; padding: 15px 32px;">
+    <button onclick="showSection( 'chingchong67')">🥮🥠🥢🥡🧧🇨🇳🎊🧧🎇🐉Chinese new year🧧✨🏮🧧🌸🎉🎆🎇</button>
+</button>
 </form>
   <button onclick="showSection('prc')">PRC</button>
   <button onclick="showSection('roc')">ROC</button>
@@ -219,6 +222,8 @@
       document.getElementById("golden1").style.display = "none";
       document.getElementById("golden2").style.display = "none";
       document.getElementById("emperors1").style.display = "none";
+      document.getElementById("chingchong67").style.display = "none";
+      
       // Show selected section
       document.getElementById(sectionId).style.display = "block";
     }
