--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@
   <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
   <button type="submit">Search</button>
 </form>
+<div id="chingchong67" class="info-section">
+ <p>
+ <strong><h4>Legend</h4></strong>
+   The nian👹 is a monster in which in the chinese language is written as such (年）which is the word for year too. 
+ </p>
+</div>
 
   </div>
   
