--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
   <label for="search-query">Search:</label>
   <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
   <button type="submit">Search</button>
-    <button style="background-color: red; color: white; border: none; padding: 15px 32px;">
-    <button onclick="showSection( 'chingchong67')">🥮🥠🥢🥡🧧🇨🇳🎊🧧🎇🐉Chinese new year🧧✨🏮🧧🌸🎉🎆🎇</button>
+    <button style="background-color: red; color: white; border: none; padding: 15px 32px;"showSection( 'chingchong67')">🥮🥠🥢🥡🧧🇨🇳🎊🧧🎇🐉Chinese new year🧧✨🏮🧧🌸🎉🎆🎇</button>
 </button>
 </form>
   <button onclick="showSection('prc')">PRC</button>
