--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
   <label for="search-query">Search:</label>
   <input type="search" id="search-query" name="q" placeholder="Enter your search term...">
   <button type="submit">Search</button>
-    <button style="background-color: red; color: white; border: none; padding: 15px 32px;"showSection( 'chingchong67')">🥮🥠🥢🥡🧧🇨🇳🎊🧧🎇🐉Chinese new year🧧✨🏮🧧🌸🎉🎆🎇</button>
-</button>
+    
 </form>
   <button onclick="showSection('prc')">PRC</button>
   <button onclick="showSection('roc')">ROC</button>
   <button onclick="showSection('golden1')">Tang Dynasty</button>
   <button onclick="showSection( 'golden2')">Song Dynasty</button>
+  <button style="background-color: red; color: white; border: none; padding: 15px 32px;"</button> <button onclick="showSection('chingchong67')">🥮🥠🥢🥡🧧🇨🇳🎊🧧🎇🐉Chinese new year🧧✨🏮🧧🌸🎉🎆🎇</button>
+</button>
 
   <!-- PRC SECTION -->
   <div id="prc" class="info-section">
